tests/error_messages/error_messages.exp
Error --------------------------------------------------------------------------------------------------- errors.js:1:12

Cannot resolve name `define`.

   1| if (typeof define === 'function' && define.amd) { }
                 ^^^^^^



Found 1 error
